added get last locations endpoint
